fix z-index

--- a/styles/_projects.scss
+++ b/styles/_projects.scss
@@ -8,6 +8,7 @@
 		span,
 		h3 {
 			margin-right: 10px;
+			z-index: 1;
 		}
 	}
 
@@ -24,7 +25,7 @@
 			flex-direction: column-reverse;
 			width: 100%;
 			position: relative;
-			z-index: 0;
+			z-index: 1;
 			padding: 20px;
 			border-radius: 5px;
 			transition: all 0.25s ease-in-out;
